# Playground_gaozm

CUDA_cpp/: CMakeLists.txt
CppProject/: CMakeLists.txt  main.cpp  test.cpp  test.h
CppProject/Assign1_HPPC/: Makefile  nbody_vectorised.cpp
Funland/: HPPC3.py  HPPCAss2.py
Game/Solution1/: Solution1.sln
Play_for_inv_pro/: Assign_1.py  Assign_2.py  Assign_2_newnew.py  Assign_2_re.py  Assign_3.py  Ex1.py  Ex2.py  InitialParams.txt  Jonas_ass2code.py  Part1_klaus.py  gravdata.txt  mars_soil.txt
Play_for_stats/Final/: DataReader_Problem1.3_VoltagePeaks.ipynb  DataReader_Problem4.2_ShuffledCards.ipynb  DataReader_Problem5.1_SolarPower.ipynb  DataReader_Problem5.2_Covid19tests.ipynb  Final Cheat sheet.ipynb  Final.ipynb  FinalExam2020_KianGao.ipynb
Play_for_stats/Problem_set/: ProblemSet2020_KianGao.ipynb  data_BetaCalibration.txt
Play_for_stats/Rolling_ball_experiment/: 14mm_s_1.csv  14mm_s_2.csv  14mm_s_3.csv  14mm_s_4.csv  14mm_s_5.csv  19mm_e_1.csv  19mm_e_2.csv  19mm_e_3.csv  19mm_e_4.csv  19mm_e_5.csv  19mm_n_1.csv  19mm_n_2.csv  19mm_n_3.csv  19mm_n_4.csv  19mm_n_5.csv  19mm_s_1.csv  19mm_s_2.csv  19mm_s_3.csv  19mm_s_4.csv  19mm_s_5.csv  19mm_w_1.csv  19mm_w_2.csv  19mm_w_3.csv  19mm_w_4.csv  19mm_w_5.csv  9mm_s_1.csv  9mm_s_2.csv  (+5 more)
Problem_set/: Problem_set.ipynb  data_Cells.txt
QCircuit/: Conformal mapping of a CPW coupler.ipynb  FluxQubit3JJ.ipynb  Transmon.ipynb
QDev/: Cap_Mat_Transmon.ipynb  CircuitQ_trial.ipynb  IPython_playground.ipynb  Ta_NW2_DC6_Repeat.py  Ta_NW_data.py  Thesis.ipynb  transmon_Elevel.py
Untitled Folder/: mental cure.ipynb
(+1 files in other folders)
